--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "license": "MIT",
   "main": "main.js",
   "scripts": {
-    "prod": "webpack --config webpack.build.config.js && electron --noDevServer .",
+    "prod": "yarn build && electron --noDevServer .",
     "dev": "webpack-dev-server --hot --host 0.0.0.0 --config=./webpack.dev.config.js",
     "build": "webpack --config webpack.build.config.js",
-    "package": "webpack --config webpack.build.config.js",
+    "package": "yarn build",
     "postpackage": "electron-packager ./ --out=./builds"
   },
   "devDependencies": {
