--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/Wilgnne/basic-electron-react-boilerplate.git"
   },
   "license": "MIT",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
     "prod": "yarn build && electron --noDevServer .",
     "dev": "webpack-dev-server --hot --host 0.0.0.0 --config=./webpack.dev.config.js",
