--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "electron-packager": "^15.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^5.0.2",
+    "fs-extra": "^9.0.1",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
